# ere

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check_airbender_crate.yml  check_airbender_image.yml  rust-checks.yml  test-airbender-docker.yml
crates/build-utils/: Cargo.toml
crates/build-utils/src/: docker.rs  lib.rs
crates/ere-airbender/: Cargo.toml
crates/ere-airbender/src/: compile.rs  error.rs  lib.rs
crates/ere-nexus/: Cargo.toml  build.rs
crates/ere-nexus/src/: error.rs  lib.rs  utils.rs
crates/ere-pico/: Cargo.toml
crates/ere-pico/src/: lib.rs
crates/ere-risczero/: Cargo.toml  build.rs  compose.yml
crates/ere-risczero/src/: lib.rs  prove.rs
crates/ere-risczero/src/prove/: bento.rs  local.rs
crates/ere-sp1/: build.rs
crates/ere-sp1/examples/empty-program/: main.rs
crates/ere-sp1/src/: compile.rs  error.rs  lib.rs
crates/ere-zisk/: Cargo.toml  build.rs
crates/ere-zisk/src/: compile.rs  error.rs  lib.rs
crates/zkvm-interface/: Cargo.toml
crates/zkvm-interface/src/: input.rs  lib.rs  network.rs
docker/airbender/: Dockerfile
docker/nexus/: Dockerfile
docker/sp1/: Dockerfile
docker/zisk/: Dockerfile
scripts/: install_cuda.sh  install_docker.sh
scripts/docker_image_builders/: build_risczero_docker_image.sh
scripts/sdk_installers/: install_airbender_sdk.sh  install_risc0_sdk.sh  install_sp1_sdk.sh  install_zisk_sdk.sh
tests/airbender/compile/basic/: Cargo.toml
tests/airbender/compile/basic/src/: main.rs
tests/airbender/execute/basic/: Cargo.toml  rust-toolchain.toml
tests/airbender/execute/basic/.cargo/: config.toml
tests/airbender/execute/basic/src/: main.rs
tests/airbender/prove/basic/: Cargo.toml
tests/airbender/prove/basic/src/: main.rs
tests/airbender/scripts/lds/: memory.x
tests/nexus/guest/: Cargo.toml
tests/risczero/compile/project_structure_build/: Cargo.toml
tests/risczero/compile/project_structure_build/guest/: Cargo.toml
tests/sp1/prove/empty/: Cargo.toml
tests/zisk/compile/basic/: Cargo.toml
tests/zisk/execute/basic/src/: main.rs
