[package]
name = "ere-airbender"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zkvm-interface = { workspace = true }
toml = "0.8"
tempfile = "3.3"
bincode = "1.3"
thiserror = "2"
tracing = "0.1"

[lib]
name = "ere_airbender"
path = "src/lib.rs"
