[package]
name = "ere-airbender"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zkvm-interface = { workspace = true }
toml = "0.8"
bincode = "1.3"
thiserror = "2"
tracing = "0.1"
tempfile = "3.3"
hex = "0.4"
indexmap = "2.0"

[lib]
name = "ere_airbender"
path = "src/lib.rs"
