[package]
name = "ere-nexus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zkvm-interface = { workspace = true }

nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", tag = "0.3.4", version = "0.3.4" }

thiserror = "2"
bincode = "1.3"
tracing = "0.1"

[build-dependencies]
build-utils = { workspace = true }

[dev-dependencies]
anyhow = "1.0"


[lints]
workspace = true
