[package]
name = "ere-risczero"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zkvm-interface = { workspace = true }
anyhow = "1.0"                                               #TODO: remove only needed in tests
toml = "0.8"
risc0-zkvm = { version = "^2.2.0", features = ["unstable"] }
bonsai-sdk = { version = "^1.4.0" }
borsh = "1.5.7"
hex = "*"
bytemuck = "1.13"
bincode = "1.3.3"

tempfile = "3.3"
serde_json = "1.0"
thiserror = "2"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
build-utils = { workspace = true }

[features]
metal = ["risc0-zkvm/metal"]
cuda = []

[lints]
workspace = true
